k8s/deployment.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: web-ui
    version: 1.0.0
  name: web-ui
spec:
  replicas: 1
  selector:
    app: web-ui
    deploymentconfig: web-ui
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: web-ui
        version: 1.0.0
        deploymentconfig: web-ui
    spec:
      serviceAccountName: web-ui
      containers:
      - image: web-ui
        name: web-ui
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - web-ui
      from:
        kind: ImageStreamTag
        name: web-ui:latest
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-ui
    version: 1.0.0
  name: web-ui
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-ui
    deploymentconfig: web-ui
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    group: com.redhat.cloudnative
    version: 1.0.0
    app: web-ui
  name: web-ui
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: web-ui
